Fix zooming on input fields on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,14 @@
     }
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    select,
+    textarea,
+    input {
+        font-size: 16px !important;
+    }
+}
+
 html {
     height: 100%;
     box-sizing: border-box;
